--- a/HW6_Float/index2.html
+++ b/HW6_Float/index2.html
@@ -13,6 +13,7 @@
         <li style="background-image: url(img/history.png);">HISTORY</li>
         <li style="background-image: url(img/security.png);">SECURITY</li>
         <li style="background-image: url(img/settings.png);">SETTINGS</li>
+        <!-- test -->
     </ul>
 </body>
 </html>
