--- a/HW19_Bootstrap/index.html
+++ b/HW19_Bootstrap/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
 
-  <nav class="d-flex justify-content-center  mb-3">
+  <nav class="d-flex justify-content-center mb-3">
     <div class="d-flex col-md-10 alert-primary rounded p-3 justify-content-around">
       <div class="bg-primary col-4 d-flex align-items-center p-0 rounded">
         <img src="img/search.png" class="ml-4 mr-4" style="width: 2.5vh;">
@@ -38,6 +38,46 @@
       <a name="" id="" class="btn btn-primary col-2"  href="#" role="button">Search</a>
     </div>
   </nav>
+
+  <div class="d-flex justify-content-center mb-3">
+    <nav class="d-flex justify-content-center p-0 col-8">
+      <div id="carouselExampleIndicators" class="carousel slide p-0 pt-1 pb-1 col-md-10" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner  border rounded">
+            <div class="carousel-item active">
+              <img class="d-block mr-auto ml-auto" src="https://content1.rozetka.com.ua/banner_main/image/original/377725002.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block mr-auto ml-auto" src="https://content.rozetka.com.ua/banner_main/image/original/380548276.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block mr-auto ml-auto" src="https://content2.rozetka.com.ua/banner_main/image/original/379385341.jpg">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </nav>
+</div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"
+  integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp"
+  crossorigin="anonymous"></script>
 
   <main class="d-flex justify-content-center  mb-3 p-0">
     <div class="d-flex col-md-10 p-0">
@@ -116,7 +156,7 @@
     </div>
   </main>
   <hr class="m-0">
-  <footer class="d-flex justify-content-center  mb-3 p-0">
+  <footer class="d-flex justify-content-center mt-3 mb-3 p-0">
     <div class="d-flex col-md-10  p-0">
       <div class="d-flex align-items-center justify-content-center col-md-3">
         <img src="img/ad_bw.png" alt="">
