--- a/Project_Website_Mystat/profile.html
+++ b/Project_Website_Mystat/profile.html
@@ -227,6 +227,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="block side-container">
+                        <div class="block completion-block">
+                            <h1>100%</h1>
+                            <p>Complete</p>
+                            <div class="completion-bar"></div>
+                        </div>
+                        <div class="block">
+                            <h1 >100%</h1>
+                            <p>Complete</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
