--- a/Project_Website_Mystat/index.html
+++ b/Project_Website_Mystat/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css">
+
 </head>
 <body>
     <div class="container">
@@ -379,6 +381,7 @@
                         </div>
                     </div>
                 </div>
+            
                 <div class="row">
                     <div class="col">
                         <div class="block homework-block">
@@ -472,6 +475,7 @@
                         </div>
                     </div>
                 </div>
+
             </section>
         </main>
 
